<resources>
    <string name="app_name">Bluehelper</string>
    <string name="textview">Логин</string>
    <string name="textview2">Пароль</string>
    <string name="button">Войти</string>
    <string name="button2">Операции с точками</string>
    <string name="button4">Операции с псевдонимами</string>
    <string name="button5">Добавить точку</string>
    <string name="button6">Удалить точку</string>
    <string name="button7">Изменить точку</string>
    <string name="textview5">Id Маркера</string>
    <string name="textview6">Название</string>
    <string name="textview7">Id Здания</string>
    <string name="button8">Добавить</string>
    <string name="textview8">Id маркера</string>
    <string name="textview9">Название точки</string>
    <string name="textview10">Id здания</string>
    <string name="button9">Обновить точку</string>
    <string name="textview11">Id Точки</string>
    <string name="button10">Удалить точку</string>
    <string name="currentBeaconLabel">nearest_beacon</string>
    <string name="addButton">Батон</string>
    <string name="discoveryCheckbox">Discovery enabled</string>
    <string name="button14">Блютус</string>
    <string name="button3">Операции с векторами</string>
    <string name="button11">Добавить вектор</string>
    <string name="button12">Удалить вектор</string>
    <string name="textview3">Ближайший маяк</string>
    <string name="checkbox">Начать поиск</string>
    <string name="textview14">Id Точки</string>
    <string name="textview15">Id маркера</string>
    <string name="textview4">Id точки</string>
    <string name="textview12">Id здания</string>
    <string name="textview13">Начальная точка</string>
    <string name="textview144">Конечная точка</string>
    <string name="textview155">Дистанция</string>
    <string name="textview16">Направление</string>
    <string name="textview156">Id вектора</string>
    <string name="textview17">Id здания</string>
    <string name="textview18">Начальная точка</string>
    <string name="textview20">Конечная точка</string>
    <string name="textview21">Дистанция</string>
    <string name="textview22">Направление</string>
    <string name="button16">Изменить вектор</string>
    <string name="textview24">Id Вектора</string>
    <string name="button17">Удалить вектор</string>
    <string name="button18">Добавить псевдоним</string>
    <string name="button19">Удалить псевдоним</string>
    <string name="button20">Изменить псевдоним</string>
    <string name="IdPointAlias">Id точки</string>
    <string name="TitleAlias">Название</string>
    <string name="button21">Добавить псевдоним</string>
    <string name="button22">Псевдонимы точки</string>
    <string name="textview27">Id точки</string>
    <string name="textview25">Id псевдонима</string>
    <string name="button23">Удалить псевдоним</string>
    <string name="button24">Псевдонимы точки</string>
    <string name="textview31">Id точки</string>
    <string name="textview33">Id псевдонима</string>
    <string name="textview35">Название псевдонима</string>
    <string name="button25">Изменить псевдоним</string>
    <string name="button26">Псевдонимы точки</string>
    <string name="textview38">Id точки</string>
</resources>
