<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.menu.MenuAlias">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/button18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button18" />

                <Button
                    android:id="@+id/button19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button19" />

                <Button
                    android:id="@+id/button20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button20" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>